RESOLVED FIXED204909
REGRESSION(r253140): Wasm::FunctionParser needs to bounds check in SetLocal/TeeLocal
https://bugs.webkit.org/show_bug.cgi?id=204909
Summary REGRESSION(r253140): Wasm::FunctionParser needs to bounds check in SetLocal/T...
Tadeu Zagallo
Reported 2019-12-05 13:34:49 PST
...
Attachments
Patch (2.61 KB, patch)
2019-12-05 13:38 PST, Tadeu Zagallo
no flags
Tadeu Zagallo
Comment 1 2019-12-05 13:38:07 PST
Keith Miller
Comment 2 2019-12-05 13:41:41 PST
Comment on attachment 384940 [details] Patch r=me.
WebKit Commit Bot
Comment 3 2019-12-05 14:33:02 PST
Comment on attachment 384940 [details] Patch Clearing flags on attachment: 384940 Committed r253171: <https://trac.webkit.org/changeset/253171>
WebKit Commit Bot
Comment 4 2019-12-05 14:33:03 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-12-05 14:34:23 PST
Note You need to log in before you can comment on or make changes to this bug.